
0.72_50 2011-04-14 nicholas
 * Exception handling is totally MSVC specific, so only use it there
   - this means that we don't need to use a C++ compiler anywhere
 * Rework bit-vector tracking mechanism to use a 256-way tree. This avoids
   making assumptions about 64-bit platforms' memory layouts, and eliminates
   the fatal error introduced in 0.72 when the assumption was violated.
 * Resolve CPAN #49437 (Devel::Size adds magic in Perl 5.10)

0.72 2008-10-14 BrowserUk 70 tests
 * Added bit-vector pointer tracking mechanism.
   - new fatal error (64-bit platforms only)
 * Added exception handling
    - 4 new warnings (disabled by default)
 * Updated POD to reflect above
 * Added basic.t test 13 
 * replaced Module::Install with hand crafted EU::MM Makefile.pl
   (With many thanks to Sisyphus)
   because we couldn't work out how to add C++ options to allow 
   exception handling.

0.71 2008-08-24 Tels 69 tests
  * adapt patch from Reini Urban to fix failing RV under 5.10 and 5.11. AV
    and HV were pushed directly onto the pending_array, and not the RV,
    which caused #33530. So he rewrote the logic to deref the RV inside
    the array traversal. Applied this with one small omission, which
    caused test faiures.
  * Fixed 5.11 RV/IV logic. (Thanx Reini Urban!)
  * Removed one duplicate total_size arrayref test. (Thanx Reini Urban!)
  * changed //printf to dbg_printf() (Thanx Reini again!)

0.70 2008-08-23 Tels 69 tests
  * fix SEGFAULTS under v5.10 (Thanx Reini Urban!)
  * fix compilation under blead (Thanx Reini Urban!)
  * require Perl 5.006 (to stop CPANTESTERS sending bogus reports
    about failed compiling on ancient Perls)
  * update the bundles Module::Install to v0.77

0.69 2007-08-11 Tels 69 tests
  * fix compilation under Perl v5.9.5 and v5.10 (Thanx Steve Peters!)
  * clarify the license by specifying Perl v5.8.8's license
  * small doc fixes, add a README file

0.68 2007-06-12 Tels 69 tests